--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "vuejs-meetups",
-	"version": "0.1.0-alpha",
+	"version": "0.9.0",
 	"description": "Creating a central location for all Vue.js meetups info",
 	"main": ".prettierrc.js",
 	"scripts": {
