feat(events): generate vue vixens events from api

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": ".prettierrc.js",
 	"scripts": {
 		"dev": "vuepress dev docs",
-		"build": "vuepress build docs"
+		"build": "vuepress build docs",
+		"generate": "node generate-events.js"
 	},
 	"author": "Ben Hong <bencodezen@gmail.com>",
 	"license": "MIT",
@@ -13,6 +14,7 @@
 		"vuepress": "^0.10.0"
 	},
 	"dependencies": {
+		"axios": "^0.18.0",
 		"lodash.merge": "^4.6.1"
 	}
 }
